--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
         <!--video-->
         <section class="videos">
             <div class="video-up">
-                <video src="videos/Drone By the Oceanside.mp4"
+                <video src="videos/Sunsert DeLorean..mp4"
                 controls
-                width="500"
                 muted
-                autoplay>
+                autoplay
+                loop>
                 </video>
 
             </div>
